[gd_scene load_steps=2 format=3 uid="uid://cpwxmame1ylhk"]

[ext_resource type="Script" path="res://Scripts/Trash.gd" id="1_qusnk"]

[node name="Trash" type="Node2D"]
scale = Vector2(0.247435, 0.247435)
script = ExtResource("1_qusnk")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 521
collision_mask = 2

[node name="PhysicalCollision2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(-2, 81)
rotation = 3.14159
scale = Vector2(116.141, 163.654)
polygon = PackedVector2Array(-1, 0, 1, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.316778, 0.316778)

[node name="InputLabel" type="Label" parent="."]
texture_filter = 1
offset_left = -9.0
offset_top = -132.0
offset_right = 31.0
offset_bottom = -109.0
scale = Vector2(2.47589, 2.47589)
text = "F"
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 2

[node name="DetectionCollision2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(1, 116)
rotation = 3.14159
scale = Vector2(396.592, 249.571)
polygon = PackedVector2Array(-0.5, 0, 0.5, 0, 0, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
